2025-09-09T00:52:20Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/17568333028 # 761
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2025-09-09
* notice: last 14d: unq all: 3 13
* notice: prev accum: outdated-unq outdated-all / unq all: 622 1016 / 635 1029
* notice: next accum: outdated-unq outdated-all / unq all: 623 1017 / 636 1030
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2025-08-25] / [2025-09-08]

2025-09-08T00:54:46Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/17536441720 # 760
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2025-09-08
* notice: last 14d: unq all: 3 13
* notice: prev accum: outdated-unq outdated-all / unq all: 621 1015 / 634 1028
* notice: next accum: outdated-unq outdated-all / unq all: 622 1016 / 635 1029
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2025-08-24] / [2025-09-07]

2025-09-07T00:56:05Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/17521724411 # 759
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2025-09-07
* notice: last 14d: unq all: 3 13
* notice: prev accum: outdated-unq outdated-all / unq all: 620 1014 / 633 1027
* notice: next accum: outdated-unq outdated-all / unq all: 621 1015 / 634 1028
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2025-08-23] / [2025-09-06]

2025-09-06T00:50:10Z: