@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2025-09-09T00:52:20Z",
-  "count_outdated" : 1017,
-  "uniques_outdated" : 623,
-  "count" : 1030,
-  "uniques" : 636,
+  "timestamp" : "2025-09-10T00:51:14Z",
+  "count_outdated" : 1018,
+  "uniques_outdated" : 624,
+  "count" : 1031,
+  "uniques" : 637,
   "clones" : [
-    {
-      "timestamp": "2025-08-26T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2025-08-27T00:00:00Z",
       "count": 1,
@@ -115,6 +106,15 @@
     },
     {
       "timestamp": "2025-09-08T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2025-09-09T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
