@@ -1,12 +1,7 @@
 {
   "count": 13,
-  "uniques": 3,
+  "uniques": 2,
   "clones": [
-    {
-      "timestamp": "2025-08-26T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2025-08-27T00:00:00Z",
       "count": 1,
@@ -64,6 +59,11 @@
     },
     {
       "timestamp": "2025-09-08T00:00:00Z",
+      "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2025-09-09T00:00:00Z",
       "count": 1,
       "uniques": 1
     }
