@@ -1,3 +1,12 @@
+2025-09-10T00:51:14Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/17599668258 # 762
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2025-09-10
+* notice: last 14d: unq all: 2 13
+* notice: prev accum: outdated-unq outdated-all / unq all: 623 1017 / 636 1030
+* notice: next accum: outdated-unq outdated-all / unq all: 624 1018 / 637 1031
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [2025-08-26] / [2025-09-09]
+
 2025-09-09T00:52:20Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/17568333028 # 761
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2025-09-09
